--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -5,8 +5,8 @@ thanks: "Paper submitted to complete the requirements of ENVSOCTY 4GA3 Applied S
 author:
 - name: Farah Chin
   student_number: 400229991
-- name: Talat  
-  student_number: 
+- name: Talat Hakim
+  student_number: 400315290
 - name: Nathan
   student_number: 
 - name: Cindia
@@ -15,8 +15,6 @@ author:
   student_number: 
 - name: Oliver
   student_number: 
-- name: Antonio Paez
-  student_number: My number
 subject: "ENVSOCTY 4GA3"
 abstract: "This paper reports our analysis of opioid prescriptions in Kentucky, USA, and its relationship with income and education at the level of counties. Data were obtained from the Washington Post database and the US Census."
 keywords: "opioids, education, income, spatial analysis"
