--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -16,7 +16,7 @@ author:
 - name: Oliver
   student_number: 
 subject: "ENVSOCTY 4GA3"
-abstract: "This paper reports our analysis of opioid prescriptions in Kentucky, USA, and its relationship with income and education at the level of counties. Data were obtained from the Washington Post database and the US Census."
+abstract: "abstract goes here"
 keywords: "opioids, education, income, spatial analysis"
 date: "4/6/2020"
 output:
