--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -32,6 +32,7 @@ always_allow_html: true
 # Introduction
 
 Words go here
+This is where Farah will do lots of work for the introductory section of the report.
 
 # Data
 
