--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -11,7 +11,7 @@ author:
   student_number: 
 - name: Cindia Dao-Vu
   student_number: 400319161
-- name: Ifra Awan
+- name: Ifra 
   student_number:400261667 
 - name: Oliver
   student_number: 
