--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -39,6 +39,18 @@ Add more words. For a review of land use regression models see @hoek2008review.
 # Data
 
 ```{r}
+# Load libraries for interpolation (might not need all of them)
+library(deldir) # Delaunay Triangulation and Dirichlet (Voronoi) Tessellation
+library(isdas) # Companion Package for Book An Introduction to Spatial Data Analysis and Statistics
+library(plotly) # Create Interactive Web Graphics via 'plotly.js'
+#library(spatstat) # Spatial Point Pattern Analysis, Model-Fitting, Simulation, Tests
+#library(spatstat.explore) # Exploratory Data Analysis for the 'spatstat' Family
+library(spdep) # Spatial Dependence: Weighting Schemes, Statistics
+library(tidyverse) # Easily Install and Load the 'Tidyverse'
+```
+
+
+```{r}
 # Load the air quality data
 
 library(readxl)
@@ -50,6 +62,17 @@ AQ_data
 ```{r}
 summary(AQ_data)
 ```
+```{r}
+AQ_plot <- ggplot(data = AQ_data, 
+              aes (x = Lat, y = Lon)) +
+  geom_point(alpha = 0.5) + 
+  scale_color_distiller(palette = "OrRd",
+                        direction = 1) +
+  coord_equal() 
+
+AQ_plot
+```
+
 
 Words
 
