--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -64,7 +64,7 @@ summary(AQ_data)
 ```
 ```{r}
 AQ_plot <- ggplot(data = AQ_data, 
-              aes (x = Lat, y = Lon)) +
+              aes (x = Lat, y = Lon, size = PM25Avg)) +
   geom_point(alpha = 0.5) + 
   scale_color_distiller(palette = "OrRd",
                         direction = 1) +
