--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -78,6 +78,34 @@ AQ_plot <- ggplot(data = AQ_data,
 AQ_plot
 ```
 
+```{r}
+AQ_data.sf <- AQ_data |> 
+  st_as_sf(coords = c("Lat", "Lon"))
+```
+
+```{r}
+vpolygons <- do.call(c, st_geometry(AQ_data.sf)) |> 
+  st_voronoi() |> 
+  st_collection_extract()
+```
+
+```{r}
+ggplot(vpolygons) + 
+  geom_sf(fill = NA)
+```
+
+```{r}
+AQ_data.v <- AQ_data.sf
+AQ_data.v$geometry <- vpolygons[unlist(st_intersects(AQ_data.sf, vpolygons))] 
+```
+
+```{r}
+ggplot(AQ_data.v) + 
+  geom_sf(aes(fill = PM25Avg)) +
+  scale_fill_distiller(palette = "OrRd", 
+                       direction = 1)
+```
+
 Words
 
 # Methods
