--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -126,12 +126,16 @@ cancensus::set_cancensus_cache_path(paste0(getwd(), "/data"),install = TRUE, ove
 ```
 
 ```{r}
-census_data <- get_census(dataset='CA16', regions=list(CMA="59933"), 
-                          vectors=c("v_CA16_408","v_CA16_409","v_CA16_410"), level='CSD', geo_format = "sf")
+toronto_income.sf <- get_census(dataset='CA21', regions=list(CMA="35535"),
+                         vectors=c("median_hh_income"="v_CA21_906"), level='CT', quiet = TRUE, 
+                         geo_format = 'sf', labels = 'short')
 
-summary(census_data)
+summary(toronto_income.sf)
+ggplot(toronto_income.sf) + geom_sf()
 ```
+```{r}
 
+```
 
 Words
 
