--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -153,7 +153,9 @@ krig_pred_var <- function(observations, targets, vgm_model, trend = "None"){
                     observations, 
                     targets, 
                     variogram_v.t)
-  return(c("mean" = mean(V.kriged$var1.var), "sd" = sd(V.kriged$var1.var)))
+  krig.list <- list(V.kriged, mean(V.kriged$var1.var), sd(V.kriged$var1.var))
+  names(krig.list) <- c("Krig.output", "variance.mean", "variance.sd")
+  return(krig.list)
 }
 ```
 
