--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -74,8 +74,6 @@ ggplot() +
 # Load the air quality data
  
 AQ_data=read_excel('data/Air_Quality_Data.xlsx')
-
-AQ_data
 ```
 
 ```{r}
@@ -100,6 +98,13 @@ AQ_plot
 ```{r}
 AQ_data.sf <- AQ_data |> 
   st_as_sf(coords = c("Lon", "Lat"))
+
+colnames(AQ_data.sf)[2] <- "P"
+
+# AQ_data.sf <- mutate(AQ_data.sf,
+#                       X3 = X^3, X2Y = X^2 * Y, X2 = X^2, 
+#                       XY = X * Y,
+#                       Y2 = Y^2, XY2 = X * Y^2, Y3 = Y^3)
 ```
 
 ```{r}
@@ -207,6 +212,11 @@ ggplot(torontoDAs.demographics.sf) + geom_sf() + geom_sf(data = AQ_data.sf, aes(
 ```{r}
 # generating centroids
 torontoDAs.centroids <- st_centroid(torontoDAs.demographics.sf)
+```
+```{r}
+#kriging
+
+kriging.output <- krig_pred_var(AQ_data.sf, torontoDAs.centroids, "Cubic", "Exp")
 ```
 
 =======
