--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -47,7 +47,7 @@ rm(list = ls())
 library(deldir) # Delaunay Triangulation and Dirichlet (Voronoi) Tessellation
 #library(isdas) # Companion Package for Book An Introduction to Spatial Data Analysis and Statistics
 #library(plotly) # Create Interactive Web Graphics via 'plotly.js'
-#library(spatstat) # Spatial Point Pattern Analysis, Model-Fitting, Simulation, Tests
+library(spatstat) # Spatial Point Pattern Analysis, Model-Fitting, Simulation, Tests
 #library(spatstat.explore) # Exploratory Data Analysis for the 'spatstat' Family
 library(spdep) # Spatial Dependence: Weighting Schemes, Statistics
 library(tidyverse) # Easily Install and Load the 'Tidyverse'
@@ -79,7 +79,7 @@ summary(AQ_data)
 ```{r}
 AQ_data.sf <- AQ_data |> 
   st_as_sf(coords = c("Lon", "Lat"), 
-           remove = "FALSE") # Keep X and Y columns
+           remove = "FALSE") # Keep Lon and Lat columns
 ```
 
 ```{r}
@@ -115,6 +115,8 @@ krig_pred_var <- function(observations, targets, vgm_model, trend = "None"){
   return(krig.list)
 }
 ```
+
+
 
 ```{r}
 # Making air quality variogram
@@ -183,13 +185,7 @@ st_crs(AQ_data.sf) <- st_crs(torontoDAs.demographics.sf)
 ```
 
 ```{r}
-AQ_data.sf <- AQ_data.sf |>
-  mutate(X = unlist(map(AQ_data.sf$geometry, 1)), 
-         Y = unlist(map(AQ_data.sf$geometry, 2))) |>
-  # Add polynomials
-  mutate(X3 = X^3, X2Y = X^2 * Y, X2 = X^2,
-         XY = X * Y, 
-         Y2 = Y^2, XY2 = X * Y^2, Y3 = Y^3)
+
 ```
 
 
@@ -251,27 +247,83 @@ AQ.res <- mutate(AQ_data.sf, "res" = AQ.trend1$residuals)
 
 #interpolate the residuals using kpoint mean with k = 5
 
-# kpoint.5 <- kpointmean(source_xy = AQ.res, 
-#                        target_xy = torontoDAs.centroids, 
-#                        z = res, 
-#                        k = 5)
+kpoint.5 <- kpointmean(source_xy = AQ_data.sf, 
+                       target_xy = torontoDAs.centroids, 
+                       z = P, 
+                       k = 10) |>
+  rename(P = z)
+```
+Using K-point means interpolation
+
+```{r}
+# Summarize interpolation
+summary(kpoint.5)
 ```
 
+
+```{r}
+# Plot predictions
+ggplot() +
+  geom_sf(data = kpoint.5, 
+            aes(color = P)) +
+  scale_color_distiller(palette = "OrRd", 
+                       direction = 1)
+```
+Using Inverse Distance Weighting
+
+```{r}
+# Categorize X and Y in separate columns
+AQ_data.sf <- AQ_data.sf |>
+  mutate(X = unlist(map(AQ_data.sf$geometry, 1)), 
+         Y = unlist(map(AQ_data.sf$geometry, 2))) |>
+  # Add polynomials
+  mutate(X3 = X^3, X2Y = X^2 * Y, X2 = X^2,
+         XY = X * Y, 
+         Y2 = Y^2, XY2 = X * Y^2, Y3 = Y^3)
+
+# Get minimum and maximum values for aquifer data
+min.X <- min(AQ_data.sf$X)
+min.Y <- min(AQ_data.sf$Y)
+max.X <- max(AQ_data.sf$X)
+max.Y <- max(AQ_data.sf$Y)
+
+# Define region of interest
+AQ.bbox <- st_polygon(list(rbind(c(min.X, min.Y),
+                                c(max.X, min.Y),
+                                c(max.X, max.Y),
+                                c(min.X, max.Y),
+                                c(min.X, min.Y))))
+
+AQ.owin <- as.owin(AQ.bbox)
+
+# We can create a `ppp` object with the coordinates of the points
+AQ_data.ppp <- as.ppp(X = AQ_data.sf[,c(4, 12:13)], W = AQ.owin)
+```
+
+The call to the function requires a `ppp` object and the argument for the power to use in the inverse distance function. In this call, the power is set to 1:
+```{r}
+z_p.idw1 <- idw(AQ_data.ppp, power = 1)
+```
+
+
+
+Kriging (currently not working)
 
 ```{r}
 # Trying kriging function again
-toronto_int <- krig_pred_var(AQ_data.sf, torontoDAs.centroids, "Cub", "Cubic")
+# toronto_int <- krig_pred_var(AQ_data.sf, torontoDAs.centroids, "Sph", "Cubic")
 ```
+
 ```{r}
 # Get kriging results
-V.kriged <- toronto_int$Krig.output
-variance_mean <- toronto_int$variance.mean
-variance_sd <- toronto_int$variance.sd
+# V.kriged <- toronto_int$Krig.output
+# variance_mean <- toronto_int$variance.mean
+# variance_sd <- toronto_int$variance.sd
 
 # Output results
-V.kriged
-variance_mean
-variance_sd
+# V.kriged
+# variance_mean
+# variance_sd
 ```
 
 
