--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -45,10 +45,10 @@ rm(list = ls())
 ```{r message = FALSE}
 # Load libraries for interpolation (might not need all of them)
 library(deldir) # Delaunay Triangulation and Dirichlet (Voronoi) Tessellation
-#library(isdas) # Companion Package for Book An Introduction to Spatial Data Analysis and Statistics
+library(isdas) # Companion Package for Book An Introduction to Spatial Data Analysis and Statistics
 #library(plotly) # Create Interactive Web Graphics via 'plotly.js'
 library(spatstat) # Spatial Point Pattern Analysis, Model-Fitting, Simulation, Tests
-#library(spatstat.explore) # Exploratory Data Analysis for the 'spatstat' Family
+library(spatstat.explore) # Exploratory Data Analysis for the 'spatstat' Family
 library(spdep) # Spatial Dependence: Weighting Schemes, Statistics
 library(tidyverse) # Easily Install and Load the 'Tidyverse'
 library(sf)
@@ -57,7 +57,7 @@ library(geojsonsf)
 library(gstat)
 library(stars)
 library(readxl)
-
+library(Metrics)
 ```
 
 ```{r}
@@ -79,7 +79,7 @@ summary(AQ_data)
 ```{r}
 AQ_data.sf <- AQ_data |> 
   st_as_sf(coords = c("Lon", "Lat"), 
-           remove = "FALSE") # Keep Lon and Lat columns
+           remove = "FALSE") # Keep X and Y columns
 ```
 
 ```{r}
@@ -115,8 +115,6 @@ krig_pred_var <- function(observations, targets, vgm_model, trend = "None"){
   return(krig.list)
 }
 ```
-
-
 
 ```{r}
 # Making air quality variogram
@@ -180,11 +178,18 @@ torontoDAs.demographics.sf <- get_census(dataset='CA21', regions=list(CSD="35200
 ```{r}
 #Projecting:
 st_transform(torontoDAs.demographics.sf, 32617)
+#st_transform(torontoDAs.demographics.sf, 4269)
 st_crs(AQ_data.sf) <- st_crs(torontoDAs.demographics.sf)
 ```
 
 ```{r}
-
+AQ_data.sf <- AQ_data.sf |>
+  mutate(X = unlist(map(AQ_data.sf$geometry, 1)), 
+         Y = unlist(map(AQ_data.sf$geometry, 2))) |>
+  # Add polynomials
+  mutate(X3 = X^3, X2Y = X^2 * Y, X2 = X^2,
+         XY = X * Y, 
+         Y2 = Y^2, XY2 = X * Y^2, Y3 = Y^3)
 ```
 
 
@@ -248,46 +253,38 @@ ggplot(AQ.res) + geom_sf(aes(colour = resSign))
 
 #interpolate the residuals using kpoint mean with k = 5
 
-kpoint.5 <- kpointmean(source_xy = AQ_data.sf, 
-                       target_xy = torontoDAs.centroids, 
-                       z = P, 
-                       k = 10) |>
-  rename(P = z)
-```
-Using K-point means interpolation
-
-```{r}
-# Summarize interpolation
-summary(kpoint.5)
+# kpoint.5 <- kpointmean(source_xy = AQ.res, 
+#                        target_xy = torontoDAs.centroids, 
+#                        z = res, 
+#                        k = 5)
 ```
 
 
-<<<<<<< HEAD
-```{r}
-# Plot predictions
-ggplot() +
-  geom_sf(data = kpoint.5, 
-            aes(color = P)) +
-  scale_color_distiller(palette = "OrRd", 
-                       direction = 1)
+```{r warning = FALSE, message = FALSE}
+# Trying kriging function again
+toronto_int <- krig_pred_var(AQ_data.sf, torontoDAs.centroids, "Exp", "Cubic")
 ```
-Using Inverse Distance Weighting
-
 ```{r}
-# Categorize X and Y in separate columns
-AQ_data.sf <- AQ_data.sf |>
-  mutate(X = unlist(map(AQ_data.sf$geometry, 1)), 
-         Y = unlist(map(AQ_data.sf$geometry, 2))) |>
-  # Add polynomials
-  mutate(X3 = X^3, X2Y = X^2 * Y, X2 = X^2,
-         XY = X * Y, 
-         Y2 = Y^2, XY2 = X * Y^2, Y3 = Y^3)
+# Get kriging results
+V.kriged <- toronto_int$Krig.output
+variance_mean <- toronto_int$variance.mean
+variance_sd <- toronto_int$variance.sd
+
+# Output results
+V.kriged
+variance_mean
+variance_sd
+```
+```{r}
+## IDW
 
 # Get minimum and maximum values for aquifer data
-min.X <- min(AQ_data.sf$X)
-min.Y <- min(AQ_data.sf$Y)
-max.X <- max(AQ_data.sf$X)
-max.Y <- max(AQ_data.sf$Y)
+min.X <- min(AQ_data$Lon)
+min.Y <- min(AQ_data$Lat)
+max.X <- max(AQ_data$Lon)
+max.Y <- max(AQ_data$Lat)
+x.range <- max.X - min.X
+y.range <- max.Y - min.Y
 
 # Define region of interest
 AQ.bbox <- st_polygon(list(rbind(c(min.X, min.Y),
@@ -299,28 +296,108 @@ AQ.bbox <- st_polygon(list(rbind(c(min.X, min.Y),
 AQ.owin <- as.owin(AQ.bbox)
 
 # We can create a `ppp` object with the coordinates of the points
-AQ_data.ppp <- as.ppp(X = AQ_data.sf[,c(4, 12:13)], W = AQ.owin)
-```
-
-The call to the function requires a `ppp` object and the argument for the power to use in the inverse distance function. In this call, the power is set to 1:
-```{r}
-z_p.idw1 <- idw(AQ_data.ppp, power = 1)
+AQ_data.ppp <- as.ppp(X = AQ_data[,2:4], W = AQ.owin)
 ```
 
 ```{r}
-# Get kriging results
-# V.kriged <- toronto_int$Krig.output
-# variance_mean <- toronto_int$variance.mean
-# variance_sd <- toronto_int$variance.sd
+summary(AQ_data.ppp)
 
-# Output results
-# V.kriged
-# variance_mean
-# variance_sd
+
+plot(AQ_data.ppp)
+
 ```
 
 
-=======
+```{r}
+
+idw.rmse <- function(ntry, power){
+  rmse.vec <- c()
+  for (i in 1:ntry){
+    train <- sample(1:nrow(AQ_data), 22)
+    train.idw <- idw(AQ_data.ppp[train,], power = power)
+    #p.idw <- idw(AQ_data.ppp, power = i, at = "points")
+    test.points <- AQ_data[-train,]
+    e.vec <- c()
+    for (j in 1:nrow(test.points)){
+      x.val <- test.points$Lon[j]
+      y.val <- test.points$Lat[j]
+      x.matIndex <- floor(((x.val - min.X)/x.range)*128)
+      y.matIndex <- floor(((y.val - min.Y)/y.range)*128)
+      idw.val <- train.idw[y.matIndex, x.matIndex]
+      se <- (test.points$P[j] - idw.val)^2
+      e.vec <- append(e.vec, se)
+    }
+    #mse <- Metrics::mse(AQ_data.ppp$marks, p.idw)
+    rmse <- sqrt(mean(e.vec))
+    rmse.vec <- append(rmse.vec, rmse)
+  }
+  return(mean(rmse))
+}
+
+```
+
+```{r}
+#idw.rmse(100, 0)
+set.seed(2024)
+power <- seq(0, 1, 0.1)
+
+for (i in power){
+  print(paste("power:", i, "rmse:", idw.rmse(100, i)))
+  #print(i)
+}
+```
+
+Here we use Leave One Out cross validation to determine the optimal power: https://www.statology.org/leave-one-out-cross-validation/
+
+See also:
+https://rpubs.com/Dr_Gurpreet/interpolation_idw_R
+
+```{r}
+# CROSS VALIDATION
+
+powers <- seq(0.001, 10, 0.01)
+mse_result <- NULL
+for(power in powers){
+  P_idw <- idw(AQ_data.ppp, power=power, at="points")
+  mse_result <- c(mse_result,
+                  Metrics::mse(AQ_data.ppp$marks,P_idw))
+}
+optimal_power <- powers[which.min(mse_result)]
+optimal_power
+```
+
+```{r}
+P.idw_points <- idw(AQ_data.ppp, power = 0.471, at = "points")
+P.idw_pixels <- idw(AQ_data.ppp, power = 0.471)
+plot(P.idw_pixels, col=heat.colors(64))
+#Metrics::mse(AQ_data.ppp$marks, z_p.idw1)
+```
+
+```{r}
+# converting im object to a df
+z.vec <- c(P.idw_pixels$v)
+Y.vec <- rep(P.idw_pixels$yrow, 128)
+X.vec <- rep(P.idw_pixels$xcol, each = 128)
+P.idw.df <- data.frame("X" = X.vec, "Y" = Y.vec, "P" = z.vec)
+```
+
+```{r}
+# k point means
+
+kpoint.10 <- kpointmean(source_xy = AQ_data.sf, 
+                       target_xy = torontoDAs.centroids, 
+                       z = P, 
+                       k = 33) |>
+  rename(P = z)
+
+ggplot() +
+  geom_sf(data = kpoint.10, 
+            aes(color = P)) +
+  scale_color_distiller(palette = "OrRd", 
+                       direction = 1)
+```
+
+
 Words
 
 # Methods
