--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -411,6 +411,7 @@ kpoint.10 <- kpointmean(source_xy = AQ_data.sf,
 #   scale_color_distiller(palette = "OrRd", 
 #                        direction = 1)
 ```
+some code
 
 SEPARATOR
 
